<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="team_header">Команда</string>
    <string name="contributors_title">Над приложением работали</string>
    <string name="favorite_title">Избранное</string>
    <string name="filters_title">Настройки фильтрации</string>
    <string name="search_vacancies">Поиск вакансий</string>
    <string name="vacancy_title">Вакансия</string>
    <string name="no_vacancy_list">Не удалось получить\nсписок вакансий</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_such_region">Такого региона нет</string>
    <string name="no_such_industry">Такой отрасли нет</string>
    <string name="region_select">Выбор региона</string>
    <string name="no_region_list">Не удалось получить\nсписок</string>
    <string name="main_bottom_navigation">Главная</string>
    <string name="no_vacancy">Вакансия не найдена или\nудалена</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="search_hint">Введите запрос</string>
    <string name="required_experience">Требуемый опыт</string>
    <string name="vacancy_description">Описание вакансии</string>
    <string name="responsibilities">Обязанности</string>
    <string name="requirements">Требования</string>
    <string name="conditions">Условия</string>
    <string name="key_skills">Ключевые навыки</string>
    <string name="menu_filter">Фильтр</string>
    <string name="no_such_vacancies">Таких вакансий нет</string>
    <string name="not_specified">Не указано</string>
    <string name="salary_is_not_specified">зарплата не указана</string>
    <string name="salary_from_format">от %1$s %2$s</string>
    <string name="salary_to_format">до %1$s %2$s</string>
    <string name="salary_range_format">от %1$s до %2$s %3$s</string>
    <string name="no_suitable_application">Нет подходящего приложения</string>
    <string name="toast_check_your_internet_connection">Проверьте подключение к интернету</string>
    <string name="toast_error_has_occurred">Произошла ошибка</string>
    <string name="found_word">Найдено</string>
    <string name="vacancy_nominative">вакансия</string>
    <string name="vacancies_genitive">вакансий</string>
    <string name="vacancy_dative">вакансии</string>
    <string name="place_work">Место работы</string>
    <string name="branch">Отрасль</string>
    <string name="expected_salary">Ожидаемая зарплата</string>
    <string name="enter_amount">Введите сумму</string>
    <string name="not_show_without_salary">Не показывать без зарплаты</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    <string name="select_industry">Выбор отрасли</string>
    <string name="enter_industry">Введите отрасль</string>
    <string name="select">Выбрать</string>
    <string name="failed_get_list">Не удалось получить список</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="job_location_selection_title">Выбор места работы</string>
    <string name="country_selection_title">Выбор страны</string>

    <plurals name="vacancies">
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d вакансий</item>
    </plurals>
</resources>
