<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_to_black"
    tools:context=".ui.industry.IndustryFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/mark_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/mark_16dp" />

    <Toolbar
        android:id="@+id/tb_header"
        style="@style/ToolbarHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/select_industry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_search_layout"
        android:layout_width="0dp"
        android:layout_height="@dimen/mark_56dp"
        android:layout_marginTop="@dimen/mark_12dp"
        android:background="@drawable/bg_search_edittext"
        android:orientation="vertical"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:cursorColor="@color/blue"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/end_guideline_16dp"
        app:layout_constraintStart_toStartOf="@+id/start_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@id/tb_header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ti_search_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/noColor"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/enter_industry"
            android:maxLines="1"
            android:padding="@dimen/mark_10dp"
            android:textColor="@color/black"
            android:textColorHint="?attr/dark_grey_to_white" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_vacancies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/mark_16dp"
        android:clipToPadding="false"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_16dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@id/tl_search_layout"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/industry_item" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cb_apply_button"
        style="@style/SelectionApplyButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/mark_60dp"
        android:layout_marginBottom="@dimen/mark_24dp"
        android:background="@drawable/blue_shape"
        android:stateListAnimator="@null"
        android:text="@string/select"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/end_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline_16dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_placeholder, tv_placeholder" />

    <ImageView
        android:id="@+id/iv_placeholder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/placeholder_no_region_list_carpet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/end_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@id/tb_header"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_placeholder"
        style="@style/PlaceholderTextStyle"
        android:layout_width="@dimen/mark_268dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_16dp"
        android:gravity="center"
        android:text="@string/failed_get_list"
        app:layout_constraintEnd_toEndOf="@id/end_guideline_16dp"
        app:layout_constraintStart_toStartOf="@id/start_guideline_16dp"
        app:layout_constraintTop_toBottomOf="@id/iv_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>
