<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/white_to_black"
    tools:context=".ui.vacancy.VacancyFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/mark_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/end_guideline_16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/mark_16dp" />

    <Toolbar
        android:id="@+id/tb_back_from_vacancy"
        style="@style/ToolbarTitleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/vacancy_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_no_vacancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_no_vacancy_placeholder, tv_no_vacancy" />

    <ImageView
        android:id="@+id/iv_no_vacancy_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/vacancy_not_found_or_deleted_andy"
        app:layout_constraintBottom_toTopOf="@id/tv_no_vacancy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_back_from_vacancy"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_no_vacancy"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_16dp"
        android:gravity="center"
        android:text="@string/no_vacancy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_vacancy_placeholder" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_server_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_server_error_placeholder, tv_server_error" />

    <ImageView
        android:id="@+id/iv_server_error_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/placeholder_vacancy_server_error_cat"
        app:layout_constraintBottom_toTopOf="@id/tv_server_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vacancy_header"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_server_error"
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mark_16dp"
        android:gravity="center"
        android:text="@string/server_error"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_server_error_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>
